--- a/become-a-host/floor-plan.html
+++ b/become-a-host/floor-plan.html
@@ -180,7 +180,7 @@
                                 aria-labelledby="stepper-item--0-row-title"
                                 class="rcem0st cngiwj8 dir dir-ltr"
                               >
-                                <div class="d-flex">
+                                <div class="flex">
                                   <div class="_gfomxi">
                                     <div
                                       id="stepper-item--0-row-title"
@@ -277,7 +277,7 @@
                                 aria-labelledby="stepper-item--1-row-title"
                                 class="rcem0st cngiwj8 dir dir-ltr"
                               >
-                                <div class="d-flex">
+                                <div class="flex">
                                   <div class="_gfomxi">
                                     <div
                                       id="stepper-item--1-row-title"
@@ -374,7 +374,7 @@
                                 aria-labelledby="stepper-item--2-row-title"
                                 class="rcem0st cngiwj8 dir dir-ltr"
                               >
-                                <div class="d-flex">
+                                <div class="flex">
                                   <div class="_gfomxi">
                                     <div
                                       id="stepper-item--2-row-title"
@@ -471,7 +471,7 @@
                                 aria-labelledby="stepper-item--3-row-title"
                                 class="rcem0st cngiwj8 dir dir-ltr"
                               >
-                                <div class="d-flex">
+                                <div class="flex">
                                   <div class="_gfomxi">
                                     <div
                                       id="stepper-item--3-row-title"
