--- a/become-a-host/legal.html
+++ b/become-a-host/legal.html
@@ -212,7 +212,7 @@
                                   for="SURVEILLANCE-row-checkbox"
                                   class="cursor-pointer"
                                 >
-                                  <div class="d-flex">
+                                  <div class="flex">
                                     <div class="_gfomxi">
                                       <div
                                         id="SURVEILLANCE-row-title"
@@ -274,7 +274,7 @@
                                   for="WEAPONS-row-checkbox"
                                   class="cursor-pointer"
                                 >
-                                  <div class="d-flex">
+                                  <div class="flex">
                                     <div class="_gfomxi">
                                       <div
                                         id="WEAPONS-row-title"
@@ -315,7 +315,7 @@
                                   for="ANIMALS-row-checkbox"
                                   class="cursor-pointer"
                                 >
-                                  <div class="d-flex">
+                                  <div class="flex">
                                     <div class="_gfomxi">
                                       <div
                                         id="ANIMALS-row-title"
