--- a/edit/photos.html
+++ b/edit/photos.html
@@ -539,7 +539,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="_1c1qb2i">
-                                                    <div class="d-flex">
+                                                    <div class="flex">
                                                       <div class="_s63vo4">
                                                         <div>
                                                           <div class="_1p99teo">
@@ -733,7 +733,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="_1c1qb2i">
-                                                    <div class="d-flex">
+                                                    <div class="flex">
                                                       <div class="_s63vo4">
                                                         <div>
                                                           <div class="_1p99teo">
@@ -864,7 +864,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="_1c1qb2i">
-                                                    <div class="d-flex">
+                                                    <div class="flex">
                                                       <div class="_s63vo4">
                                                         <div>
                                                           <div class="_1p99teo">
@@ -995,7 +995,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="_1c1qb2i">
-                                                    <div class="d-flex">
+                                                    <div class="flex">
                                                       <div class="_s63vo4">
                                                         <div>
                                                           <div class="_1p99teo">
@@ -1126,7 +1126,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="_1c1qb2i">
-                                                    <div class="d-flex">
+                                                    <div class="flex">
                                                       <div class="_s63vo4">
                                                         <div>
                                                           <div class="_1p99teo">
@@ -1257,7 +1257,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="_1c1qb2i">
-                                                    <div class="d-flex">
+                                                    <div class="flex">
                                                       <div class="_s63vo4">
                                                         <div>
                                                           <div class="_1p99teo">
@@ -1388,7 +1388,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="_1c1qb2i">
-                                                    <div class="d-flex">
+                                                    <div class="flex">
                                                       <div class="_s63vo4">
                                                         <div>
                                                           <div class="_1p99teo">
@@ -1519,7 +1519,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="_1c1qb2i">
-                                                    <div class="d-flex">
+                                                    <div class="flex">
                                                       <div class="_s63vo4">
                                                         <div>
                                                           <div class="_1p99teo">
@@ -1650,7 +1650,7 @@
                                                     </div>
                                                   </div>
                                                   <div class="_1c1qb2i">
-                                                    <div class="d-flex">
+                                                    <div class="flex">
                                                       <div class="_s63vo4">
                                                         <div>
                                                           <div class="_1p99teo">
