--- a/inbox.html
+++ b/inbox.html
@@ -126,7 +126,7 @@
       ._bzfhend:hover {
         text-decoration: none !important;
       }
-      .d-flex {
+      .flex {
         display: -webkit-box !important;
         display: -moz-box !important;
         display: -ms-flexbox !important;
@@ -7277,7 +7277,7 @@
                       <div class="_s4plha">
                         <button class="_bzfhend" type="button">
                           <span class="_vwled5" aria-hidden="true"
-                            ><div class="d-flex">
+                            ><div class="flex">
                               <div class="flex-item">
                                 <div style="margin-right: 0">
                                   <svg
@@ -7705,7 +7705,7 @@
                                           class="_1yw7hpv"
                                           for="inbox-query"
                                           ><div dir="ltr">
-                                            <div class="d-flex">
+                                            <div class="flex">
                                               <input
                                                 type="text"
                                                 placeholder="Search inbox"
@@ -7841,7 +7841,7 @@
                                           class="_1ft3e2s"
                                           tabindex="0"
                                           href="/hosting/inbox/exp/folder/all/thread/1212691250/details"
-                                          ><div class="d-flex">
+                                          ><div class="flex">
                                             <div class="_ajdgyn">
                                               <div
                                                 class="img-middle"
@@ -7990,7 +7990,7 @@
                                           class="_1ft3e2s"
                                           tabindex="0"
                                           href="/hosting/inbox/exp/folder/all/thread/1212691254/details"
-                                          ><div class="d-flex">
+                                          ><div class="flex">
                                             <div class="_ajdgyn">
                                               <div
                                                 class="img-middle"
