--- a/profile-reviews.html
+++ b/profile-reviews.html
@@ -739,7 +739,7 @@
                           itemtype="http://schema.org/Organization"
                           class="_18gze56"
                         >
-                          <div class="d-flex">
+                          <div class="flex">
                             <div class="flex-item">
                               <div style="margin-right: 8px">
                                 <svg
