--- a/resolutions.html
+++ b/resolutions.html
@@ -159,7 +159,7 @@
                         <label
                           for="intent-send-money-row-radio-button"
                           class="cursor-pointer"
-                          ><div class="d-flex">
+                          ><div class="flex">
                             <div class="_7ytxmo">
                               <input
                                 aria-labelledby="intent-send-money-row-title"
@@ -190,7 +190,7 @@
                         <label
                           for="intent-request-money-row-radio-button"
                           class="cursor-pointer"
-                          ><div class="d-flex">
+                          ><div class="flex">
                             <div class="_7ytxmo">
                               <input
                                 aria-labelledby="intent-request-money-row-title"
