--- a/resolutions_2.html
+++ b/resolutions_2.html
@@ -183,7 +183,7 @@
                           <label
                             for="reason-GUEST_OFFER_DAMAGE-row-radio-button"
                             class="cursor-pointer"
-                            ><div class="d-flex">
+                            ><div class="flex">
                               <div class="_7ytxmo">
                                 <input
                                   aria-labelledby="reason-GUEST_OFFER_DAMAGE-row-title"
@@ -213,7 +213,7 @@
                           <label
                             for="reason-GUEST_OFFER_EXTRA-row-radio-button"
                             class="cursor-pointer"
-                            ><div class="d-flex">
+                            ><div class="flex">
                               <div class="_7ytxmo">
                                 <input
                                   aria-labelledby="reason-GUEST_OFFER_EXTRA-row-title"
@@ -252,7 +252,7 @@
                           <label
                             for="reason-GUEST_OFFER_OTHER-row-radio-button"
                             class="cursor-pointer"
-                            ><div class="d-flex">
+                            ><div class="flex">
                               <div class="_7ytxmo">
                                 <input
                                   aria-labelledby="reason-GUEST_OFFER_OTHER-row-title"
