--- a/resources.html
+++ b/resources.html
@@ -1099,7 +1099,7 @@
                                                 aria-hidden="false"
                                                 class="_of605hp"
                                               >
-                                                <div class="d-flex">
+                                                <div class="flex">
                                                   <button
                                                     aria-label="Previous"
                                                     disabled=""
@@ -1826,7 +1826,7 @@
                                                 aria-hidden="false"
                                                 class="_of605hp"
                                               >
-                                                <div class="d-flex">
+                                                <div class="flex">
                                                   <button
                                                     aria-label="Previous"
                                                     disabled=""
@@ -2553,7 +2553,7 @@
                                                 aria-hidden="false"
                                                 class="_of605hp"
                                               >
-                                                <div class="d-flex">
+                                                <div class="flex">
                                                   <button
                                                     aria-label="Previous"
                                                     disabled=""
@@ -3279,7 +3279,7 @@
                                               aria-hidden="false"
                                               class="_of605hp"
                                             >
-                                              <div class="d-flex">
+                                              <div class="flex">
                                                 <button
                                                   aria-label="Previous"
                                                   disabled=""
@@ -5372,7 +5372,7 @@
                       <section>
                         <div class="_1udzt2s">
                           <div class="_p03egf">
-                            <div class="d-flex">
+                            <div class="flex">
                               <span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
                                   <span class="a8jt5op dir dir-ltr"
@@ -5435,7 +5435,7 @@
                         </div>
                         <div class="_15m7xnk">
                           <div class="_1juxowe">
-                            <div class="d-flex">
+                            <div class="flex">
                               <span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
                                   <span class="a8jt5op dir dir-ltr"
@@ -5604,8 +5604,8 @@
                               </div>
                             </div>
                           </div>
-                          <div class="d-flex">
-                            <div class="d-flex">
+                          <div class="flex">
+                            <div class="flex">
                               <span class="_19c5bku"
                                 ><button type="button" class="_f2hxk3s">
                                   <span class="a8jt5op dir dir-ltr"
