--- a/reviews.html
+++ b/reviews.html
@@ -373,9 +373,9 @@
                                       <label
                                         for="expectations_option_very_high-row-radio-button"
                                         class="cursor-pointer"
-                                        ><div class="d-flex">
+                                        ><div class="flex">
                                           <div class="_gfomxi">
-                                            <div class="d-flex">
+                                            <div class="flex">
                                               <div class="_7ytxmo"></div>
                                               <div>
                                                 <div
@@ -410,7 +410,7 @@
                                       <label
                                         for="expectations_option_very_high-row-radio-button"
                                         class="cursor-pointer"
-                                        ><div class="d-flex">
+                                        ><div class="flex">
                                           <div class="_7ytxmo">
                                             <input
                                               name="expectations_question_component"
@@ -423,7 +423,7 @@
                                             />
                                           </div>
                                           <div class="_gfomxi">
-                                            <div class="d-flex">
+                                            <div class="flex">
                                               <div class="_7ytxmo"></div>
                                               <div>
                                                 <div
@@ -452,9 +452,9 @@
                                       <label
                                         for="expectations_option_high-row-radio-button"
                                         class="cursor-pointer"
-                                        ><div class="d-flex">
+                                        ><div class="flex">
                                           <div class="_gfomxi">
-                                            <div class="d-flex">
+                                            <div class="flex">
                                               <div class="_7ytxmo"></div>
                                               <div>
                                                 <div
@@ -489,7 +489,7 @@
                                       <label
                                         for="expectations_option_high-row-radio-button"
                                         class="cursor-pointer"
-                                        ><div class="d-flex">
+                                        ><div class="flex">
                                           <div class="_7ytxmo">
                                             <input
                                               name="expectations_question_component"
@@ -502,7 +502,7 @@
                                             />
                                           </div>
                                           <div class="_gfomxi">
-                                            <div class="d-flex">
+                                            <div class="flex">
                                               <div class="_7ytxmo"></div>
                                               <div>
                                                 <div
@@ -531,9 +531,9 @@
                                       <label
                                         for="expectations_option_neutral-row-radio-button"
                                         class="cursor-pointer"
-                                        ><div class="d-flex">
+                                        ><div class="flex">
                                           <div class="_gfomxi">
-                                            <div class="d-flex">
+                                            <div class="flex">
                                               <div class="_7ytxmo"></div>
                                               <div>
                                                 <div
@@ -568,7 +568,7 @@
                                       <label
                                         for="expectations_option_neutral-row-radio-button"
                                         class="cursor-pointer"
-                                        ><div class="d-flex">
+                                        ><div class="flex">
                                           <div class="_7ytxmo">
                                             <input
                                               name="expectations_question_component"
@@ -581,7 +581,7 @@
                                             />
                                           </div>
                                           <div class="_gfomxi">
-                                            <div class="d-flex">
+                                            <div class="flex">
                                               <div class="_7ytxmo"></div>
                                               <div>
                                                 <div
@@ -610,9 +610,9 @@
                                       <label
                                         for="expectations_option_low-row-radio-button"
                                         class="cursor-pointer"
-                                        ><div class="d-flex">
+                                        ><div class="flex">
                                           <div class="_gfomxi">
-                                            <div class="d-flex">
+                                            <div class="flex">
                                               <div class="_7ytxmo"></div>
                                               <div>
                                                 <div
@@ -647,7 +647,7 @@
                                       <label
                                         for="expectations_option_low-row-radio-button"
                                         class="cursor-pointer"
-                                        ><div class="d-flex">
+                                        ><div class="flex">
                                           <div class="_7ytxmo">
                                             <input
                                               name="expectations_question_component"
@@ -660,7 +660,7 @@
                                             />
                                           </div>
                                           <div class="_gfomxi">
-                                            <div class="d-flex">
+                                            <div class="flex">
                                               <div class="_7ytxmo"></div>
                                               <div>
                                                 <div
@@ -689,9 +689,9 @@
                                       <label
                                         for="expectations_option_very_low-row-radio-button"
                                         class="cursor-pointer"
-                                        ><div class="d-flex">
+                                        ><div class="flex">
                                           <div class="_gfomxi">
-                                            <div class="d-flex">
+                                            <div class="flex">
                                               <div class="_7ytxmo"></div>
                                               <div>
                                                 <div
@@ -726,7 +726,7 @@
                                       <label
                                         for="expectations_option_very_low-row-radio-button"
                                         class="cursor-pointer"
-                                        ><div class="d-flex">
+                                        ><div class="flex">
                                           <div class="_7ytxmo">
                                             <input
                                               name="expectations_question_component"
@@ -739,7 +739,7 @@
                                             />
                                           </div>
                                           <div class="_gfomxi">
-                                            <div class="d-flex">
+                                            <div class="flex">
                                               <div class="_7ytxmo"></div>
                                               <div>
                                                 <div
