--- a/signup_login.html
+++ b/signup_login.html
@@ -63,7 +63,7 @@
                             aria-label="Explore"
                             href="/"
                           >
-                            <div class="d-flex">
+                            <div class="flex">
                               <div class="_tbbnrnx">
                                 <svg
                                   viewBox="0 0 32 32"
@@ -98,7 +98,7 @@
                             aria-label="Wishlists"
                             href="/wishlists"
                           >
-                            <div class="d-flex">
+                            <div class="flex">
                               <div class="_tbbnrnx">
                                 <svg
                                   viewBox="0 0 32 32"
@@ -132,7 +132,7 @@
                             href="/login"
                             data-veloute="pwa-tab-bar-item-login"
                           >
-                            <div class="d-flex">
+                            <div class="flex">
                               <div class="_jgit7bg">
                                 <svg
                                   viewBox="0 0 32 32"
@@ -214,7 +214,7 @@
                                         class="cx1v2qp dir dir-ltr"
                                         style="border-radius: 8px"
                                       >
-                                        <div class="d-flex">
+                                        <div class="flex">
                                           <div
                                             class="relative"
                                             style="flex: 1 1 0%"
@@ -1045,7 +1045,7 @@
                                             ></div>
                                           </div>
                                         </div>
-                                        <div class="d-flex">
+                                        <div class="flex">
                                           <div
                                             class="relative"
                                             style="flex: 2 1 0%"
@@ -1121,7 +1121,7 @@
                                             ></div>
                                           </div>
                                         </div>
-                                        <div class="d-flex">
+                                        <div class="flex">
                                           <div
                                             class="relative"
                                             style="flex: 2 1 0%"
@@ -2055,7 +2055,7 @@
                                         class="cx1v2qp dir dir-ltr"
                                         style="border-radius: 8px"
                                       >
-                                        <div class="d-flex">
+                                        <div class="flex">
                                           <div
                                             class="relative"
                                             style="flex: 1 1 0%"
@@ -2126,7 +2126,7 @@
                                             ></div>
                                           </div>
                                         </div>
-                                        <div class="d-flex">
+                                        <div class="flex">
                                           <div
                                             class="relative"
                                             style="flex: 1 1 0%"
@@ -2211,7 +2211,7 @@
                                         class="cx1v2qp dir dir-ltr"
                                         style="border-radius: 8px"
                                       >
-                                        <div class="d-flex">
+                                        <div class="flex">
                                           <div
                                             class="relative"
                                             style="flex: 1 1 0%"
@@ -2283,7 +2283,7 @@
                                             ></div>
                                           </div>
                                         </div>
-                                        <div class="d-flex">
+                                        <div class="flex">
                                           <div
                                             class="relative"
                                             style="flex: 1 1 0%"
@@ -2387,7 +2387,7 @@
                                           class="cx1v2qp dir dir-ltr"
                                           style="border-radius: 8px"
                                         >
-                                          <div class="d-flex">
+                                          <div class="flex">
                                             <div
                                               class="relative"
                                               style="flex: 1 1 0%"
@@ -2474,7 +2474,7 @@
                                           class="cx1v2qp dir dir-ltr"
                                           style="border-radius: 8px"
                                         >
-                                          <div class="d-flex">
+                                          <div class="flex">
                                             <div
                                               class="relative"
                                               style="flex: 1 1 0%"
@@ -2949,7 +2949,7 @@
                                           name="email-signupuser_profile_info[receive_promotional_email]"
                                           value="0"
                                         /><label
-                                          class="atm_9s_1txwivl dir dir-ltr"
+                                          class="flex dir dir-ltr"
                                           for="email-signupuser_profile_info[receive_promotional_email]"
                                           ><span class="_10ndlvp"
                                             ><input
@@ -2977,7 +2977,7 @@
                                           name="email-signupuser_profile_info[receive_promotional_email]"
                                           value="0"
                                         /><label
-                                          class="atm_9s_1txwivl dir dir-ltr"
+                                          class="flex dir dir-ltr"
                                           for="email-signupuser_profile_info[receive_promotional_email]"
                                           ><span class="_10ndlvp"
                                             ><input
@@ -3268,7 +3268,7 @@
                                       class="cx1v2qp dir dir-ltr"
                                       style="border-radius: 8px"
                                     >
-                                      <div class="d-flex">
+                                      <div class="flex">
                                         <div
                                           class="relative"
                                           style="flex: 1 1 0%"
@@ -4097,7 +4097,7 @@
                                           ></div>
                                         </div>
                                       </div>
-                                      <div class="d-flex">
+                                      <div class="flex">
                                         <div
                                           class="relative"
                                           style="flex: 2 1 0%"
@@ -4173,7 +4173,7 @@
                                           ></div>
                                         </div>
                                       </div>
-                                      <div class="d-flex">
+                                      <div class="flex">
                                         <div
                                           class="relative"
                                           style="flex: 2 1 0%"
@@ -5088,7 +5088,7 @@
                                       class="cx1v2qp dir dir-ltr"
                                       style="border-radius: 8px"
                                     >
-                                      <div class="d-flex">
+                                      <div class="flex">
                                         <div
                                           class="relative"
                                           style="flex: 1 1 0%"
@@ -5159,7 +5159,7 @@
                                           ></div>
                                         </div>
                                       </div>
-                                      <div class="d-flex">
+                                      <div class="flex">
                                         <div
                                           class="relative"
                                           style="flex: 1 1 0%"
@@ -5244,7 +5244,7 @@
                                       class="cx1v2qp dir dir-ltr"
                                       style="border-radius: 8px"
                                     >
-                                      <div class="d-flex">
+                                      <div class="flex">
                                         <div
                                           class="relative"
                                           style="flex: 1 1 0%"
@@ -5316,7 +5316,7 @@
                                           ></div>
                                         </div>
                                       </div>
-                                      <div class="d-flex">
+                                      <div class="flex">
                                         <div
                                           class="relative"
                                           style="flex: 1 1 0%"
@@ -5420,7 +5420,7 @@
                                         class="cx1v2qp dir dir-ltr"
                                         style="border-radius: 8px"
                                       >
-                                        <div class="d-flex">
+                                        <div class="flex">
                                           <div
                                             class="relative"
                                             style="flex: 1 1 0%"
@@ -5507,7 +5507,7 @@
                                         class="cx1v2qp dir dir-ltr"
                                         style="border-radius: 8px"
                                       >
-                                        <div class="d-flex">
+                                        <div class="flex">
                                           <div
                                             class="relative"
                                             style="flex: 1 1 0%"
@@ -5974,7 +5974,7 @@
                                         name="email-signupuser_profile_info[receive_promotional_email]"
                                         value="0"
                                       /><label
-                                        class="atm_9s_1txwivl dir dir-ltr"
+                                        class="flex dir dir-ltr"
                                         for="email-signupuser_profile_info[receive_promotional_email]"
                                         ><span class="_10ndlvp"
                                           ><input
@@ -6002,7 +6002,7 @@
                                         name="email-signupuser_profile_info[receive_promotional_email]"
                                         value="0"
                                       /><label
-                                        class="atm_9s_1txwivl dir dir-ltr"
+                                        class="flex dir dir-ltr"
                                         for="email-signupuser_profile_info[receive_promotional_email]"
                                         ><span class="_10ndlvp"
                                           ><input
@@ -6222,7 +6222,7 @@
                           <section>
                             <div class="_1udzt2s">
                               <div class="_p03egf">
-                                <div class="d-flex">
+                                <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
                                       <span class="a8jt5op dir dir-ltr"
@@ -6288,7 +6288,7 @@
                             </div>
                             <div class="_15m7xnk">
                               <div class="_1juxowe">
-                                <div class="d-flex">
+                                <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
                                       <span class="a8jt5op dir dir-ltr"
@@ -6468,8 +6468,8 @@
                                   </div>
                                 </div>
                               </div>
-                              <div class="d-flex">
-                                <div class="d-flex">
+                              <div class="flex">
+                                <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
                                       <span class="a8jt5op dir dir-ltr"
