--- a/submission/etd.html
+++ b/submission/etd.html
@@ -1126,7 +1126,7 @@
                                     <div class="_klarpw">
                                       <label
                                         for="info_score_educate_about_animals-Yes"
-                                        class="d-flex"
+                                        class="flex"
                                         ><input
                                           id="info_score_educate_about_animals-Yes"
                                           name="info_score_educate_about_animals"
@@ -1144,7 +1144,7 @@
                                     <div class="_klarpw">
                                       <label
                                         for="info_score_educate_about_animals-No"
-                                        class="d-flex"
+                                        class="flex"
                                         ><input
                                           id="info_score_educate_about_animals-No"
                                           name="info_score_educate_about_animals"
