--- a/submission/photo.html
+++ b/submission/photo.html
@@ -1177,7 +1177,7 @@
                                                         </div>
                                                       </div>
                                                       <div class="_1c1qb2i">
-                                                        <div class="d-flex">
+                                                        <div class="flex">
                                                           <div class="_s63vo4">
                                                             <div>
                                                               <div
@@ -1301,7 +1301,7 @@
                                                         </div>
                                                       </div>
                                                       <div class="_1c1qb2i">
-                                                        <div class="d-flex">
+                                                        <div class="flex">
                                                           <div class="_s63vo4">
                                                             <div>
                                                               <div
@@ -1425,7 +1425,7 @@
                                                         </div>
                                                       </div>
                                                       <div class="_1c1qb2i">
-                                                        <div class="d-flex">
+                                                        <div class="flex">
                                                           <div class="_s63vo4">
                                                             <div>
                                                               <div
@@ -1549,7 +1549,7 @@
                                                         </div>
                                                       </div>
                                                       <div class="_1c1qb2i">
-                                                        <div class="d-flex">
+                                                        <div class="flex">
                                                           <div class="_s63vo4">
                                                             <div>
                                                               <div
@@ -1673,7 +1673,7 @@
                                                         </div>
                                                       </div>
                                                       <div class="_1c1qb2i">
-                                                        <div class="d-flex">
+                                                        <div class="flex">
                                                           <div class="_s63vo4">
                                                             <div>
                                                               <div
