--- a/become-a-host/_location.html
+++ b/become-a-host/_location.html
@@ -262,7 +262,7 @@
                                             for="searchable-address-search"
                                           >
                                             <div dir="ltr">
-                                              <div class="d-flex">
+                                              <div class="flex">
                                                 <input
                                                   type="text"
                                                   placeholder="Enter your address"
