--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -532,7 +532,7 @@
                                 for="new-listing-promotion-row-checkbox"
                                 class="cursor-pointer"
                               >
-                                <div class="d-flex">
+                                <div class="flex">
                                   <div class="_gfomxi">
                                     <div
                                       id="new-listing-promotion-row-title"
