--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -46,7 +46,7 @@
                       <div class="_s4plha">
                         <button class="_bzfhend" type="button">
                           <span class="_vwled5" aria-hidden="true"
-                            ><div class="d-flex">
+                            ><div class="flex">
                               <div class="flex-item">
                                 <div style="margin-right: 0">
                                   <svg
