--- a/contact-host.html
+++ b/contact-host.html
@@ -57,7 +57,7 @@
                       aria-disabled="false"
                       aria-label="Explore"
                       href="/"
-                      ><div class="d-flex">
+                      ><div class="flex">
                         <div class="_tbbnrnx">
                           <svg
                             viewBox="0 0 32 32"
@@ -91,7 +91,7 @@
                       aria-disabled="false"
                       aria-label="Wishlists"
                       href="/wishlists"
-                      ><div class="d-flex">
+                      ><div class="flex">
                         <div class="_tbbnrnx">
                           <svg
                             viewBox="0 0 32 32"
@@ -123,7 +123,7 @@
                       aria-disabled="false"
                       aria-label="Trips"
                       href="/trips/v1"
-                      ><div class="d-flex">
+                      ><div class="flex">
                         <div class="_tbbnrnx" style="top: -1px">
                           <svg
                             viewBox="0 0 32 32"
@@ -152,7 +152,7 @@
                       aria-disabled="false"
                       aria-label="Inbox"
                       href="/guest/inbox"
-                      ><div class="d-flex">
+                      ><div class="flex">
                         <div class="_tbbnrnx" style="top: 1px">
                           <svg
                             viewBox="0 0 32 32"
@@ -182,7 +182,7 @@
                       aria-label="Profile"
                       href="/account-settings"
                       data-veloute="pwa-tab-bar-item-profile"
-                      ><div class="d-flex">
+                      ><div class="flex">
                         <div class="_tbbnrnx">
                           <svg
                             viewBox="0 0 32 32"
@@ -2341,7 +2341,7 @@
                                                               "
                                                             >
                                                               <div
-                                                                class="d-flex"
+                                                                class="flex"
                                                               >
                                                                 <div
                                                                   class="w-100"
@@ -2451,7 +2451,7 @@
                                                                 </div>
                                                               </div>
                                                               <div
-                                                                class="d-flex"
+                                                                class="flex"
                                                               >
                                                                 <div
                                                                   class="_bp34sw"
