--- a/edit/about.html
+++ b/edit/about.html
@@ -457,7 +457,7 @@
                                           aria-labelledby="ABOUT_YOU_PROFILE_EDIT_LINKS-row-title"
                                           class="rcem0st u6fux4d dir dir-ltr"
                                         >
-                                          <div class="d-flex">
+                                          <div class="flex">
                                             <div class="_7ytxmo">
                                               <div class="_1tn24b0o">
                                                 <div
