--- a/edit/what.html
+++ b/edit/what.html
@@ -677,7 +677,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                               <label
                                                 for="ONLINE_QUESTION-0-radio-row-row-radio-button"
                                                 class="cursor-pointer"
-                                                ><div class="d-flex">
+                                                ><div class="flex">
                                                   <div class="_gfomxi">
                                                     <div
                                                       id="ONLINE_QUESTION-0-radio-row-row-title"
@@ -715,7 +715,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                               <label
                                                 for="ONLINE_QUESTION-1-radio-row-row-radio-button"
                                                 class="cursor-pointer"
-                                                ><div class="d-flex">
+                                                ><div class="flex">
                                                   <div class="_gfomxi">
                                                     <div
                                                       id="ONLINE_QUESTION-1-radio-row-row-title"
@@ -762,7 +762,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                           aria-labelledby="CONCEPT_REFINEMENT_0-disclosure-row-row-title"
                                           class="rcem0st dir dir-ltr"
                                         >
-                                          <div class="d-flex">
+                                          <div class="flex">
                                             <div class="_gfomxi">
                                               <button
                                                 data-testid="CONCEPT_REFINEMENT_0-disclosure-row"
@@ -826,7 +826,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                           aria-labelledby="CONCEPT_REFINEMENT_1-disclosure-row-row-title"
                                           class="rcem0st dir dir-ltr"
                                         >
-                                          <div class="d-flex">
+                                          <div class="flex">
                                             <div class="_gfomxi">
                                               <button
                                                 data-testid="CONCEPT_REFINEMENT_1-disclosure-row"
