--- a/experiences.html
+++ b/experiences.html
@@ -126,7 +126,7 @@
       ._bzfhend:hover {
         text-decoration: none !important;
       }
-      .d-flex {
+      .flex {
         display: -webkit-box !important;
         display: -moz-box !important;
         display: -ms-flexbox !important;
@@ -4000,7 +4000,7 @@
                       <div class="_s4plha">
                         <button class="_bzfhend" type="button">
                           <span class="_vwled5" aria-hidden="true"
-                            ><div class="d-flex">
+                            ><div class="flex">
                               <div class="flex-item">
                                 <div style="margin-right: 0px">
                                   <svg
@@ -4923,7 +4923,7 @@
                     <section>
                       <div class="_1udzt2s">
                         <div class="_p03egf">
-                          <div class="d-flex">
+                          <div class="flex">
                             <span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
                                 <span class="a8jt5op dir dir-ltr"
@@ -4984,7 +4984,7 @@
                       </div>
                       <div class="_15m7xnk">
                         <div class="_1juxowe">
-                          <div class="d-flex">
+                          <div class="flex">
                             <span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
                                 <span class="a8jt5op dir dir-ltr"
@@ -5153,8 +5153,8 @@
                             </div>
                           </div>
                         </div>
-                        <div class="d-flex">
-                          <div class="d-flex">
+                        <div class="flex">
+                          <div class="flex">
                             <span class="_19c5bku"
                               ><button type="button" class="_f2hxk3s">
                                 <span class="a8jt5op dir dir-ltr"
