--- a/gift.html
+++ b/gift.html
@@ -898,7 +898,7 @@
                         <section>
                           <div class="_1udzt2s">
                             <div class="_p03egf">
-                              <div class="d-flex">
+                              <div class="flex">
                                 <span class="_19c5bku"
                                   ><button type="button" class="_f2hxk3s">
                                     <span class="a8jt5op dir dir-ltr"
@@ -962,7 +962,7 @@
                           </div>
                           <div class="_15m7xnk">
                             <div class="_1juxowe">
-                              <div class="d-flex">
+                              <div class="flex">
                                 <span class="_19c5bku"
                                   ><button type="button" class="_f2hxk3s">
                                     <span class="a8jt5op dir dir-ltr"
@@ -1132,8 +1132,8 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="d-flex">
-                              <div class="d-flex">
+                            <div class="flex">
+                              <div class="flex">
                                 <span class="_19c5bku"
                                   ><button type="button" class="_f2hxk3s">
                                     <span class="a8jt5op dir dir-ltr"
