--- a/merchandising.html
+++ b/merchandising.html
@@ -63,7 +63,7 @@
                             aria-disabled="true"
                             aria-label="Explore"
                             href="/"
-                            ><div class="d-flex">
+                            ><div class="flex">
                               <div class="_jgit7bg">
                                 <svg
                                   viewBox="0 0 32 32"
@@ -97,7 +97,7 @@
                             aria-disabled="false"
                             aria-label="Wishlists"
                             href="/wishlists"
-                            ><div class="d-flex">
+                            ><div class="flex">
                               <div class="_tbbnrnx">
                                 <svg
                                   viewBox="0 0 32 32"
@@ -129,7 +129,7 @@
                             aria-disabled="false"
                             aria-label="Trips"
                             href="/trips/v1"
-                            ><div class="d-flex">
+                            ><div class="flex">
                               <div class="_tbbnrnx" style="top: -1px">
                                 <svg
                                   viewBox="0 0 32 32"
@@ -158,7 +158,7 @@
                             aria-disabled="false"
                             aria-label="Inbox"
                             href="/guest/inbox"
-                            ><div class="d-flex">
+                            ><div class="flex">
                               <div class="_tbbnrnx" style="top: 1px">
                                 <svg
                                   viewBox="0 0 32 32"
@@ -188,7 +188,7 @@
                             aria-label="Profile"
                             href="/account-settings"
                             data-veloute="pwa-tab-bar-item-profile"
-                            ><div class="d-flex">
+                            ><div class="flex">
                               <div class="_tbbnrnx">
                                 <svg
                                   viewBox="0 0 32 32"
@@ -1299,7 +1299,7 @@
                                                         aria-hidden="false"
                                                         class="_1uytoza"
                                                       >
-                                                        <div class="d-flex">
+                                                        <div class="flex">
                                                           <button
                                                             aria-label="Previous"
                                                             disabled=""
@@ -12884,7 +12884,7 @@
                                                 <section>
                                                   <div class="_1udzt2s">
                                                     <div class="_p03egf">
-                                                      <div class="d-flex">
+                                                      <div class="flex">
                                                         <span class="_19c5bku"
                                                           ><button
                                                             type="button"
@@ -12986,7 +12986,7 @@
                                                   </div>
                                                   <div class="_15m7xnk">
                                                     <div class="_1juxowe">
-                                                      <div class="d-flex">
+                                                      <div class="flex">
                                                         <span class="_19c5bku"
                                                           ><button
                                                             type="button"
@@ -13210,8 +13210,8 @@
                                                         </div>
                                                       </div>
                                                     </div>
-                                                    <div class="d-flex">
-                                                      <div class="d-flex">
+                                                    <div class="flex">
+                                                      <div class="flex">
                                                         <span class="_19c5bku"
                                                           ><button
                                                             type="button"
