--- a/notifications.html
+++ b/notifications.html
@@ -61,7 +61,7 @@
                             aria-disabled="false"
                             aria-label="Explore"
                             href="/"
-                            ><div class="d-flex">
+                            ><div class="flex">
                               <div class="_tbbnrnx">
                                 <svg
                                   viewBox="0 0 32 32"
@@ -95,7 +95,7 @@
                             aria-disabled="false"
                             aria-label="Wishlists"
                             href="/wishlists"
-                            ><div class="d-flex">
+                            ><div class="flex">
                               <div class="_tbbnrnx">
                                 <svg
                                   viewBox="0 0 32 32"
@@ -127,7 +127,7 @@
                             aria-disabled="false"
                             aria-label="Trips"
                             href="/trips/v1"
-                            ><div class="d-flex">
+                            ><div class="flex">
                               <div class="_tbbnrnx" style="top: -1px">
                                 <svg
                                   viewBox="0 0 32 32"
@@ -156,7 +156,7 @@
                             aria-disabled="true"
                             aria-label="Inbox"
                             href="/guest/inbox"
-                            ><div class="d-flex">
+                            ><div class="flex">
                               <div class="_jgit7bg" style="top: 1px">
                                 <svg
                                   viewBox="0 0 32 32"
@@ -186,7 +186,7 @@
                             aria-label="Profile"
                             href="/account-settings"
                             data-veloute="pwa-tab-bar-item-profile"
-                            ><div class="d-flex">
+                            ><div class="flex">
                               <div class="_tbbnrnx">
                                 <svg
                                   viewBox="0 0 32 32"
@@ -406,7 +406,7 @@
                                     role="tabpanel"
                                     id="panel-notifications"
                                   >
-                                    <div class="d-flex">
+                                    <div class="flex">
                                       <a
                                         target="_blank"
                                         id="5250843878"
@@ -488,7 +488,7 @@
                                         </button>
                                       </div>
                                     </div>
-                                    <div class="d-flex">
+                                    <div class="flex">
                                       <a
                                         target="_blank"
                                         id="5250843873"
