--- a/payment.html
+++ b/payment.html
@@ -1382,7 +1382,7 @@
                                     <section>
                                       <div class="_1udzt2s">
                                         <div class="_p03egf">
-                                          <div class="d-flex">
+                                          <div class="flex">
                                             <span class="_19c5bku"
                                               ><button
                                                 type="button"
@@ -1474,7 +1474,7 @@
                                       </div>
                                       <div class="_15m7xnk">
                                         <div class="_1juxowe">
-                                          <div class="d-flex">
+                                          <div class="flex">
                                             <span class="_19c5bku"
                                               ><button
                                                 type="button"
@@ -1689,8 +1689,8 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="d-flex">
-                                          <div class="d-flex">
+                                        <div class="flex">
+                                          <div class="flex">
                                             <span class="_19c5bku"
                                               ><button
                                                 type="button"
