--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -62,7 +62,7 @@
                             aria-disabled="false"
                             aria-label="Explore"
                             href="/"
-                            ><div class="d-flex">
+                            ><div class="flex">
                               <div class="_tbbnrnx">
                                 <svg
                                   viewBox="0 0 32 32"
@@ -96,7 +96,7 @@
                             aria-disabled="false"
                             aria-label="Wishlists"
                             href="/wishlists"
-                            ><div class="d-flex">
+                            ><div class="flex">
                               <div class="_tbbnrnx">
                                 <svg
                                   viewBox="0 0 32 32"
@@ -128,7 +128,7 @@
                             aria-disabled="false"
                             aria-label="Trips"
                             href="/trips/v1"
-                            ><div class="d-flex">
+                            ><div class="flex">
                               <div class="_tbbnrnx" style="top: -1px">
                                 <svg
                                   viewBox="0 0 32 32"
@@ -157,7 +157,7 @@
                             aria-disabled="false"
                             aria-label="Inbox"
                             href="/guest/inbox"
-                            ><div class="d-flex">
+                            ><div class="flex">
                               <div class="_tbbnrnx" style="top: 1px">
                                 <svg
                                   viewBox="0 0 32 32"
@@ -187,7 +187,7 @@
                             aria-label="Profile"
                             href="/account-settings"
                             data-veloute="pwa-tab-bar-item-profile"
-                            ><div class="d-flex">
+                            ><div class="flex">
                               <div class="_jgit7bg">
                                 <svg
                                   viewBox="0 0 32 32"
@@ -332,7 +332,7 @@
                                                     aria-labelledby="payment-methods-payment-instrument-row-title-1435214401"
                                                     class="rcem0st dir dir-ltr"
                                                   >
-                                                    <div class="d-flex">
+                                                    <div class="flex">
                                                       <div class="_7ytxmo">
                                                         <div class="_oyq8vf">
                                                           <div class="_18k2iy">
@@ -535,7 +535,7 @@
                                                 aria-labelledby="credit-section-0-gifts-actions-no-transaction-title"
                                                 class="rcem0st dir dir-ltr"
                                               >
-                                                <div class="d-flex">
+                                                <div class="flex">
                                                   <div class="_gfomxi">
                                                     <div
                                                       id="credit-section-0-gifts-actions-no-transaction-title"
@@ -592,7 +592,7 @@
                                                 aria-labelledby="undefined-no-transaction-title"
                                                 class="rcem0st dir dir-ltr"
                                               >
-                                                <div class="d-flex">
+                                                <div class="flex">
                                                   <div class="_gfomxi">
                                                     <div
                                                       id="undefined-no-transaction-title"
@@ -1080,7 +1080,7 @@
                                                     aria-labelledby="payment-methods-payment-instrument-row-title-1435214401"
                                                     class="rcem0st dir dir-ltr"
                                                   >
-                                                    <div class="d-flex">
+                                                    <div class="flex">
                                                       <div class="_7ytxmo">
                                                         <div class="_oyq8vf">
                                                           <div class="_18k2iy">
@@ -1283,7 +1283,7 @@
                                                 aria-labelledby="credit-section-0-gifts-actions-no-transaction-title"
                                                 class="rcem0st dir dir-ltr"
                                               >
-                                                <div class="d-flex">
+                                                <div class="flex">
                                                   <div class="_gfomxi">
                                                     <div
                                                       id="credit-section-0-gifts-actions-no-transaction-title"
@@ -1340,7 +1340,7 @@
                                                 aria-labelledby="undefined-no-transaction-title"
                                                 class="rcem0st dir dir-ltr"
                                               >
-                                                <div class="d-flex">
+                                                <div class="flex">
                                                   <div class="_gfomxi">
                                                     <div
                                                       id="undefined-no-transaction-title"
@@ -1638,7 +1638,7 @@
                           <section>
                             <div class="_1udzt2s">
                               <div class="_p03egf">
-                                <div class="d-flex">
+                                <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
                                       <span class="a8jt5op dir dir-ltr"
@@ -1704,7 +1704,7 @@
                             </div>
                             <div class="_15m7xnk">
                               <div class="_1juxowe">
-                                <div class="d-flex">
+                                <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
                                       <span class="a8jt5op dir dir-ltr"
@@ -1884,8 +1884,8 @@
                                   </div>
                                 </div>
                               </div>
-                              <div class="d-flex">
-                                <div class="d-flex">
+                              <div class="flex">
+                                <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
                                       <span class="a8jt5op dir dir-ltr"
