--- a/places.html
+++ b/places.html
@@ -16615,7 +16615,7 @@
                                   aria-labelledby="address-row-title"
                                   class="rcem0st cngiwj8 dir dir-ltr"
                                 >
-                                  <div class="d-flex">
+                                  <div class="flex">
                                     <div class="_7ytxmo">
                                       <div class="_oyq8vf">
                                         <svg
@@ -16919,7 +16919,7 @@
                           <section>
                             <div class="_1udzt2s">
                               <div class="_p03egf">
-                                <div class="d-flex">
+                                <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
                                       <span class="a8jt5op dir dir-ltr"
@@ -16985,7 +16985,7 @@
                             </div>
                             <div class="_15m7xnk">
                               <div class="_1juxowe">
-                                <div class="d-flex">
+                                <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
                                       <span class="a8jt5op dir dir-ltr"
@@ -17165,8 +17165,8 @@
                                   </div>
                                 </div>
                               </div>
-                              <div class="d-flex">
-                                <div class="d-flex">
+                              <div class="flex">
+                                <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
                                       <span class="a8jt5op dir dir-ltr"
