--- a/privacy-and-sharing.html
+++ b/privacy-and-sharing.html
@@ -61,7 +61,7 @@
                             aria-disabled="false"
                             aria-label="Explore"
                             href="/"
-                            ><div class="d-flex">
+                            ><div class="flex">
                               <div class="_tbbnrnx">
                                 <svg
                                   viewBox="0 0 32 32"
@@ -95,7 +95,7 @@
                             aria-disabled="false"
                             aria-label="Wishlists"
                             href="/wishlists"
-                            ><div class="d-flex">
+                            ><div class="flex">
                               <div class="_tbbnrnx">
                                 <svg
                                   viewBox="0 0 32 32"
@@ -127,7 +127,7 @@
                             aria-disabled="false"
                             aria-label="Trips"
                             href="/trips/v1"
-                            ><div class="d-flex">
+                            ><div class="flex">
                               <div class="_tbbnrnx" style="top: -1px">
                                 <svg
                                   viewBox="0 0 32 32"
@@ -156,7 +156,7 @@
                             aria-disabled="false"
                             aria-label="Inbox"
                             href="/guest/inbox"
-                            ><div class="d-flex">
+                            ><div class="flex">
                               <div class="_tbbnrnx" style="top: 1px">
                                 <svg
                                   viewBox="0 0 32 32"
@@ -186,7 +186,7 @@
                             aria-label="Profile"
                             href="/account-settings"
                             data-veloute="pwa-tab-bar-item-profile"
-                            ><div class="d-flex">
+                            ><div class="flex">
                               <div class="_jgit7bg">
                                 <svg
                                   viewBox="0 0 32 32"
@@ -365,7 +365,7 @@
                                                         aria-labelledby="ap-row-row-title"
                                                         class="rcem0st dir dir-ltr"
                                                       >
-                                                        <div class="d-flex">
+                                                        <div class="flex">
                                                           <div class="_gfomxi">
                                                             <button
                                                               type="button"
@@ -427,7 +427,7 @@
                                                         aria-labelledby="erasure-row-row-title"
                                                         class="rcem0st dir dir-ltr"
                                                       >
-                                                        <div class="d-flex">
+                                                        <div class="flex">
                                                           <div class="_gfomxi">
                                                             <a
                                                               href="/privacy/manage-your-data/deletion"
@@ -1044,7 +1044,7 @@
                                                 aria-labelledby="ap-row-row-title"
                                                 class="rcem0st dir dir-ltr"
                                               >
-                                                <div class="d-flex">
+                                                <div class="flex">
                                                   <div class="_gfomxi">
                                                     <button
                                                       type="button"
@@ -1099,7 +1099,7 @@
                                                 aria-labelledby="erasure-row-row-title"
                                                 class="rcem0st dir dir-ltr"
                                               >
-                                                <div class="d-flex">
+                                                <div class="flex">
                                                   <div class="_gfomxi">
                                                     <a
                                                       href="/privacy/manage-your-data/deletion"
@@ -1560,7 +1560,7 @@
                           <section>
                             <div class="_1udzt2s">
                               <div class="_p03egf">
-                                <div class="d-flex">
+                                <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
                                       <span class="a8jt5op dir dir-ltr"
@@ -1626,7 +1626,7 @@
                             </div>
                             <div class="_15m7xnk">
                               <div class="_1juxowe">
-                                <div class="d-flex">
+                                <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
                                       <span class="a8jt5op dir dir-ltr"
@@ -1806,8 +1806,8 @@
                                   </div>
                                 </div>
                               </div>
-                              <div class="d-flex">
-                                <div class="d-flex">
+                              <div class="flex">
+                                <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
                                       <span class="a8jt5op dir dir-ltr"
