--- a/products.html
+++ b/products.html
@@ -51,7 +51,7 @@
                       aria-disabled="false"
                       aria-label="Explore"
                       href="/"
-                      ><div class="d-flex">
+                      ><div class="flex">
                         <div class="_tbbnrnx">
                           <svg
                             viewBox="0 0 32 32"
@@ -85,7 +85,7 @@
                       aria-disabled="false"
                       aria-label="Wishlists"
                       href="/wishlists"
-                      ><div class="d-flex">
+                      ><div class="flex">
                         <div class="_tbbnrnx">
                           <svg
                             viewBox="0 0 32 32"
@@ -117,7 +117,7 @@
                       aria-disabled="false"
                       aria-label="Trips"
                       href="/trips/v1"
-                      ><div class="d-flex">
+                      ><div class="flex">
                         <div class="_tbbnrnx" style="top: -1px">
                           <svg
                             viewBox="0 0 32 32"
@@ -146,7 +146,7 @@
                       aria-disabled="false"
                       aria-label="Inbox"
                       href="/guest/inbox"
-                      ><div class="d-flex">
+                      ><div class="flex">
                         <div class="_tbbnrnx" style="top: 1px">
                           <svg
                             viewBox="0 0 32 32"
@@ -176,7 +176,7 @@
                       aria-label="Profile"
                       href="/account-settings"
                       data-veloute="pwa-tab-bar-item-profile"
-                      ><div class="d-flex">
+                      ><div class="flex">
                         <div class="_tbbnrnx">
                           <svg
                             viewBox="0 0 32 32"
@@ -1538,7 +1538,7 @@
                                               <section>
                                                 <div>
                                                   <div class="_1ynbv25">
-                                                    <div class="d-flex">
+                                                    <div class="flex">
                                                       <div class="_tqmy57">
                                                         <div class="_kh3xmo">
                                                           Entire home
@@ -7251,7 +7251,7 @@
                                     <section>
                                       <div class="_1udzt2s">
                                         <div class="_p03egf">
-                                          <div class="d-flex">
+                                          <div class="flex">
                                             <span class="_19c5bku"
                                               ><button
                                                 type="button"
@@ -7343,7 +7343,7 @@
                                       </div>
                                       <div class="_15m7xnk">
                                         <div class="_1juxowe">
-                                          <div class="d-flex">
+                                          <div class="flex">
                                             <span class="_19c5bku"
                                               ><button
                                                 type="button"
@@ -7555,8 +7555,8 @@
                                             </div>
                                           </div>
                                         </div>
-                                        <div class="d-flex">
-                                          <div class="d-flex">
+                                        <div class="flex">
+                                          <div class="flex">
                                             <span class="_19c5bku"
                                               ><button
                                                 type="button"
@@ -9266,7 +9266,7 @@
                                                 <section>
                                                   <div>
                                                     <div class="_88xxct">
-                                                      <div class="d-flex">
+                                                      <div class="flex">
                                                         <div class="_tqmy57">
                                                           <div class="_cv5qq4">
                                                             <h2
@@ -16475,7 +16475,7 @@
                                                                     "
                                                                   >
                                                                     <div
-                                                                      class="d-flex"
+                                                                      class="flex"
                                                                     >
                                                                       <div
                                                                         class="w-100"
@@ -16583,7 +16583,7 @@
                                                                       </div>
                                                                     </div>
                                                                     <div
-                                                                      class="d-flex"
+                                                                      class="flex"
                                                                     >
                                                                       <div
                                                                         class="_bp34sw"
@@ -16798,7 +16798,7 @@
                                                         class="b1k5q1b3 v18vkvko dir dir-ltr"
                                                       >
                                                         <span
-                                                          class="atm_h_1h6ojuz atm_9s_1txwivl atm_7l_12u4tyr atm_bx_1ltc5j7 atm_cs_qo5vgd atm_c8_fkimz8 atm_g3_11yl58k dir dir-ltr"
+                                                          class="atm_h_1h6ojuz flex atm_7l_12u4tyr atm_bx_1ltc5j7 atm_cs_qo5vgd atm_c8_fkimz8 atm_g3_11yl58k dir dir-ltr"
                                                           ><span
                                                             class="atm_h0_exct8b dir dir-ltr"
                                                             ><svg
@@ -16971,7 +16971,7 @@
                                                                     "
                                                                   >
                                                                     <div
-                                                                      class="d-flex"
+                                                                      class="flex"
                                                                     >
                                                                       <div
                                                                         class="w-100"
@@ -17077,7 +17077,7 @@
                                                                       </div>
                                                                     </div>
                                                                     <div
-                                                                      class="d-flex"
+                                                                      class="flex"
                                                                     >
                                                                       <div
                                                                         class="_bp34sw"
@@ -17487,7 +17487,7 @@
                                                         class="b1k5q1b3 v18vkvko dir dir-ltr"
                                                       >
                                                         <span
-                                                          class="atm_h_1h6ojuz atm_9s_1txwivl atm_7l_12u4tyr atm_bx_1ltc5j7 atm_cs_qo5vgd atm_c8_fkimz8 atm_g3_11yl58k dir dir-ltr"
+                                                          class="atm_h_1h6ojuz flex atm_7l_12u4tyr atm_bx_1ltc5j7 atm_cs_qo5vgd atm_c8_fkimz8 atm_g3_11yl58k dir dir-ltr"
                                                           ><span
                                                             class="atm_h0_exct8b dir dir-ltr"
                                                             ><svg
@@ -17660,7 +17660,7 @@
                                                                     "
                                                                   >
                                                                     <div
-                                                                      class="d-flex"
+                                                                      class="flex"
                                                                     >
                                                                       <div
                                                                         class="w-100"
@@ -17770,7 +17770,7 @@
                                                                       </div>
                                                                     </div>
                                                                     <div
-                                                                      class="d-flex"
+                                                                      class="flex"
                                                                     >
                                                                       <div
                                                                         class="_bp34sw"
@@ -18098,7 +18098,7 @@
                                                         class="b1k5q1b3 v18vkvko dir dir-ltr"
                                                       >
                                                         <span
-                                                          class="atm_h_1h6ojuz atm_9s_1txwivl atm_7l_12u4tyr atm_bx_1ltc5j7 atm_cs_qo5vgd atm_c8_fkimz8 atm_g3_11yl58k dir dir-ltr"
+                                                          class="atm_h_1h6ojuz flex atm_7l_12u4tyr atm_bx_1ltc5j7 atm_cs_qo5vgd atm_c8_fkimz8 atm_g3_11yl58k dir dir-ltr"
                                                           ><span
                                                             class="atm_h0_exct8b dir dir-ltr"
                                                             ><svg
@@ -20784,7 +20784,7 @@
                                   <section>
                                     <div class="_1udzt2s">
                                       <div class="_p03egf">
-                                        <div class="d-flex">
+                                        <div class="flex">
                                           <span class="_19c5bku"
                                             ><button
                                               type="button"
@@ -20872,7 +20872,7 @@
                                     </div>
                                     <div class="_15m7xnk">
                                       <div class="_1juxowe">
-                                        <div class="d-flex">
+                                        <div class="flex">
                                           <span class="_19c5bku"
                                             ><button
                                               type="button"
@@ -21080,8 +21080,8 @@
                                           </div>
                                         </div>
                                       </div>
-                                      <div class="d-flex">
-                                        <div class="d-flex">
+                                      <div class="flex">
+                                        <div class="flex">
                                           <span class="_19c5bku"
                                             ><button
                                               type="button"
