--- a/resolutions_3.html
+++ b/resolutions_3.html
@@ -463,7 +463,7 @@
                               >
                                 <span class="_ftj2sg4"
                                   ><div
-                                    class="d-flex"
+                                    class="flex"
                                     style="justify-content: center"
                                   >
                                     <div class="flex-item">
