--- a/submission/GeneralV.html
+++ b/submission/GeneralV.html
@@ -1177,7 +1177,7 @@
                                   <div class="_klarpw">
                                     <label
                                       for="info_available_date_to_host-Weekdays"
-                                      class="d-flex"
+                                      class="flex"
                                       ><input
                                         id="info_available_date_to_host-Weekdays"
                                         name="info_available_date_to_host"
@@ -1197,7 +1197,7 @@
                                   <div class="_klarpw">
                                     <label
                                       for="info_available_date_to_host-Weekends"
-                                      class="d-flex"
+                                      class="flex"
                                       ><input
                                         id="info_available_date_to_host-Weekends"
                                         name="info_available_date_to_host"
@@ -1216,7 +1216,7 @@
                                   <div class="_klarpw">
                                     <label
                                       for="info_available_date_to_host-Both weekdays and weekends"
-                                      class="d-flex"
+                                      class="flex"
                                       ><input
                                         id="info_available_date_to_host-Both weekdays and weekends"
                                         name="info_available_date_to_host"
@@ -1235,7 +1235,7 @@
                                   <div class="_klarpw">
                                     <label
                                       for="info_available_date_to_host-I don’t know yet"
-                                      class="d-flex"
+                                      class="flex"
                                       ><input
                                         id="info_available_date_to_host-I don’t know yet"
                                         name="info_available_date_to_host"
