--- a/submission/about.html
+++ b/submission/about.html
@@ -1072,7 +1072,7 @@
                                     <div class="_klarpw">
                                       <label
                                         for="info_best_describe_you_and_experience-I’m hosting by myself"
-                                        class="d-flex"
+                                        class="flex"
                                         ><input
                                           id="info_best_describe_you_and_experience-I’m hosting by myself"
                                           name="info_best_describe_you_and_experience"
@@ -1092,7 +1092,7 @@
                                     <div class="_klarpw">
                                       <label
                                         for="info_best_describe_you_and_experience-I have a team who helps me host"
-                                        class="d-flex"
+                                        class="flex"
                                         ><input
                                           id="info_best_describe_you_and_experience-I have a team who helps me host"
                                           name="info_best_describe_you_and_experience"
@@ -1132,7 +1132,7 @@
                                 aria-labelledby="profile_photo-row-title"
                                 class="rcem0st uyl8mnh dir dir-ltr"
                               >
-                                <div class="d-flex">
+                                <div class="flex">
                                   <div class="_7ytxmo">
                                     <div class="_1tn24b0o">
                                       <div
