--- a/submission/booking.html
+++ b/submission/booking.html
@@ -1419,7 +1419,7 @@
                           <div class="_1htwqzi">
                             <div class="_r8kijh">
                               <div style="margin-bottom: 24px">
-                                <div class="d-flex">
+                                <div class="flex">
                                   <div class="_1t2q299c">
                                     <div style="margin-right: 16px">
                                       <div style="margin-top: 8px">
@@ -1455,7 +1455,7 @@
                                 </div>
                               </div>
                               <div style="margin-bottom: 0px">
-                                <div class="d-flex">
+                                <div class="flex">
                                   <div class="_1t2q299c">
                                     <div style="margin-right: 16px">
                                       <div style="margin-top: 8px">
