--- a/submission/review.html
+++ b/submission/review.html
@@ -1094,7 +1094,7 @@
                                       aria-labelledby="disclosure-action-row-row-title"
                                       class="rcem0st cngiwj8 dir dir-ltr"
                                     >
-                                      <div class="d-flex">
+                                      <div class="flex">
                                         <div class="_gfomxi">
                                           <button
                                             type="button"
@@ -1166,7 +1166,7 @@
                                       aria-labelledby="disclosure-action-row-row-title"
                                       class="rcem0st cngiwj8 dir dir-ltr"
                                     >
-                                      <div class="d-flex">
+                                      <div class="flex">
                                         <div class="_gfomxi">
                                           <button
                                             type="button"
@@ -1238,7 +1238,7 @@
                                       aria-labelledby="disclosure-action-row-row-title"
                                       class="rcem0st cngiwj8 dir dir-ltr"
                                     >
-                                      <div class="d-flex">
+                                      <div class="flex">
                                         <div class="_gfomxi">
                                           <button
                                             type="button"
@@ -1294,7 +1294,7 @@
                               <label
                                 for="info_is_compliant_with_all_laws-row-checkbox"
                                 class="cursor-pointer"
-                                ><div class="d-flex">
+                                ><div class="flex">
                                   <div class="_gfomxi">
                                     <div
                                       id="info_is_compliant_with_all_laws-row-title"
@@ -1341,7 +1341,7 @@
                               <label
                                 for="info_is_compliant_with_airbnb_policies-row-checkbox"
                                 class="cursor-pointer"
-                                ><div class="d-flex">
+                                ><div class="flex">
                                   <div class="_gfomxi">
                                     <div
                                       id="info_is_compliant_with_airbnb_policies-row-title"
