--- a/submission/theme.html
+++ b/submission/theme.html
@@ -1078,7 +1078,7 @@
                                   aria-labelledby="primary-theme-row-row-title"
                                   class="rcem0st dir dir-ltr"
                                 >
-                                  <div class="d-flex">
+                                  <div class="flex">
                                     <div class="_gfomxi">
                                       <button type="button" class="_u1thwpg">
                                         <span class="_rortwiu"
@@ -1284,7 +1284,7 @@
                   </div>
                   <label class="_1yw7hpv" for="theme-search-input"
                     ><div dir="ltr">
-                      <div class="d-flex">
+                      <div class="flex">
                         <input
                           placeholder="Search"
                           aria-label="Search"
@@ -1311,7 +1311,7 @@
                         aria-labelledby="Tag:510-row-row-title"
                         class="rcem0st dir dir-ltr"
                       >
-                        <div class="d-flex">
+                        <div class="flex">
                           <div class="_gfomxi">
                             <button type="button" class="_u1thwpg">
                               <span class="_rortwiu"
@@ -1357,7 +1357,7 @@
                         aria-labelledby="Tag:1347-row-row-title"
                         class="rcem0st dir dir-ltr"
                       >
-                        <div class="d-flex">
+                        <div class="flex">
                           <div class="_gfomxi">
                             <button type="button" class="_u1thwpg">
                               <span class="_rortwiu"
@@ -1403,7 +1403,7 @@
                         aria-labelledby="CustomView:202-row-row-title"
                         class="rcem0st dir dir-ltr"
                       >
-                        <div class="d-flex">
+                        <div class="flex">
                           <div class="_gfomxi">
                             <button type="button" class="_u1thwpg">
                               <span class="_rortwiu"
@@ -1449,7 +1449,7 @@
                         aria-labelledby="Tag:1718-row-row-title"
                         class="rcem0st dir dir-ltr"
                       >
-                        <div class="d-flex">
+                        <div class="flex">
                           <div class="_gfomxi">
                             <button type="button" class="_u1thwpg">
                               <span class="_rortwiu"
@@ -1495,7 +1495,7 @@
                         aria-labelledby="Tag:455-row-row-title"
                         class="rcem0st dir dir-ltr"
                       >
-                        <div class="d-flex">
+                        <div class="flex">
                           <div class="_gfomxi">
                             <button type="button" class="_u1thwpg">
                               <span class="_rortwiu"
@@ -1541,7 +1541,7 @@
                         aria-labelledby="Tag:1686-row-row-title"
                         class="rcem0st dir dir-ltr"
                       >
-                        <div class="d-flex">
+                        <div class="flex">
                           <div class="_gfomxi">
                             <button type="button" class="_u1thwpg">
                               <span class="_rortwiu"
@@ -1587,7 +1587,7 @@
                         aria-labelledby="CustomView:201-row-row-title"
                         class="rcem0st dir dir-ltr"
                       >
-                        <div class="d-flex">
+                        <div class="flex">
                           <div class="_gfomxi">
                             <button type="button" class="_u1thwpg">
                               <span class="_rortwiu"
@@ -1633,7 +1633,7 @@
                         aria-labelledby="Tag:2513-row-row-title"
                         class="rcem0st dir dir-ltr"
                       >
-                        <div class="d-flex">
+                        <div class="flex">
                           <div class="_gfomxi">
                             <button type="button" class="_u1thwpg">
                               <span class="_rortwiu"
@@ -1679,7 +1679,7 @@
                         aria-labelledby="CustomView:203-row-row-title"
                         class="rcem0st dir dir-ltr"
                       >
-                        <div class="d-flex">
+                        <div class="flex">
                           <div class="_gfomxi">
                             <button type="button" class="_u1thwpg">
                               <span class="_rortwiu"
@@ -1725,7 +1725,7 @@
                         aria-labelledby="Tag:459-row-row-title"
                         class="rcem0st dir dir-ltr"
                       >
-                        <div class="d-flex">
+                        <div class="flex">
                           <div class="_gfomxi">
                             <button type="button" class="_u1thwpg">
                               <span class="_rortwiu"
@@ -1771,7 +1771,7 @@
                         aria-labelledby="Tag:2948-row-row-title"
                         class="rcem0st dir dir-ltr"
                       >
-                        <div class="d-flex">
+                        <div class="flex">
                           <div class="_gfomxi">
                             <button type="button" class="_u1thwpg">
                               <span class="_rortwiu"
