--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1296,7 +1296,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                     <label
                                       for="info_where_are_you_broadcasting-Indoors or on my personal property-row-radio-button"
                                       class="cursor-pointer"
-                                      ><div class="d-flex">
+                                      ><div class="flex">
                                         <div class="_gfomxi">
                                           <div
                                             id="info_where_are_you_broadcasting-Indoors or on my personal property-row-title"
@@ -1334,7 +1334,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                     <label
                                       for="info_where_are_you_broadcasting-Outdoors and not on my personal property-row-radio-button"
                                       class="cursor-pointer"
-                                      ><div class="d-flex">
+                                      ><div class="flex">
                                         <div class="_gfomxi">
                                           <div
                                             id="info_where_are_you_broadcasting-Outdoors and not on my personal property-row-title"
@@ -1377,7 +1377,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                   aria-labelledby="CustomView:113-row-title"
                                   class="rcem0st dir dir-ltr"
                                 >
-                                  <div class="d-flex">
+                                  <div class="flex">
                                     <div class="_gfomxi">
                                       <button type="button" class="_u1thwpg">
                                         <span class="_rortwiu"
