--- a/trips.html
+++ b/trips.html
@@ -897,7 +897,7 @@
                           <section>
                             <div class="_1udzt2s">
                               <div class="_p03egf">
-                                <div class="d-flex">
+                                <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
                                       <span class="a8jt5op dir dir-ltr"
@@ -963,7 +963,7 @@
                             </div>
                             <div class="_15m7xnk">
                               <div class="_1juxowe">
-                                <div class="d-flex">
+                                <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
                                       <span class="a8jt5op dir dir-ltr"
@@ -1146,8 +1146,8 @@
                                   </div>
                                 </div>
                               </div>
-                              <div class="d-flex">
-                                <div class="d-flex">
+                              <div class="flex">
+                                <div class="flex">
                                   <span class="_19c5bku"
                                     ><button type="button" class="_f2hxk3s">
                                       <span class="a8jt5op dir dir-ltr"
